# equip-sync-m-module

./: .gitignore  CLAUDE.md  README.md  main.py  pyproject.toml  requirements.txt
.github/workflows/: build.yml
agent/: api_client.py  auth.py  state.py  worker.py
gui/: __init__.py  agent_view.py  app.py  dashboard.py  recent.py  settings_panel.py  settings_view.py  stats.py  theme.py
watcher/: __init__.py  __main__.py  config.py  fonts.py  logger.py  observer.py  pairing.py  pipeline.py  printer.py  service.py
watcher/agent/: __init__.py  api_client.py  worker.py
watcher/gui/: app.py  cards.py  header.py  log_box.py  op_control.py  settings_panel.py  theme.py
