[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "equip-sync-m-module"
version = "0.7.5"
description = "Mug transfer printer watcher + agent (DPS Store)"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pypdf>=5.4.0,<6",
    "watchdog>=6.0.0,<7",
    "customtkinter>=5.2.2,<6",
    "requests>=2.31,<3",
    "pdf2image>=1.17,<2",
    "Pillow>=10.0,<12",
    "reportlab>=4.0,<5",
    "pywin32>=306;sys_platform=='win32'",
]

[project.scripts]
equip-sync-m = "watcher.__main__:main"

[tool.setuptools.packages.find]
include = ["watcher*"]
